Dev Container Config Update

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -36,32 +36,7 @@
 		"fabiospampinato.vscode-github-notifications-bell",
 		"lior-chamla.google-fonts",
 		"mkaufman.HTMLHint",
-		"oderwat.indent-rainbow",
-		"ypresto.vscode-intelli-refactor",
-		"VisualStudioExptTeam.vscodeintellicode",
-		"Zignd.html-css-class-completion",
-		"ZainChen.json",
-		"Meezilla.json",
-		"MariusAlchimavicius.json-to-ts",
-		"eriklynd.json-tools",
-		"DavidAnson.vscode-markdownlint",
-		"ryu1kn.partial-diff",
-		"esbenp.prettier-vscode",
-		"nils-ballmann.python-coding-tools",
-		"donjayamanne.python-environment-manager",
-		"donjayamanne.python-extension-pack",
-		"KevinRose.vsc-python-indent",
-		"mikeshaker.python-essentials",
-		"chrisvltn.vs-code-semicolon-insertion",
-		"foxundermoon.shell-format",
-		"timonwong.shellcheck",
-		"richie5um2.vscode-sort-json",
-		"ban.spellright",
-		"mtxr.sqltools",
-		"mtxr.sqltools-driver-pg",
-		"stylelint.vscode-stylelint",
-		"CelianRiboulet.webvalidator",
-		"E-Jacques.pytestersuits"
+		"oderwat.indent-rainbow"
 	],
 	"forwardPorts": [
 		5432,
