Perfecting Routing - Not Ready

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -36,7 +36,39 @@
 		"fabiospampinato.vscode-github-notifications-bell",
 		"lior-chamla.google-fonts",
 		"mkaufman.HTMLHint",
-		"oderwat.indent-rainbow"
+		"oderwat.indent-rainbow",
+		"thekalinga.bootstrap4-vscode",
+		"pranaygp.vscode-css-peek",
+		"casperstorm.directory-files",
+		"formulahendry.docker-explorer",
+		"henriiik.docker-linter",
+		"bodil.file-browser",
+		"cstrap.flask-snippets",
+		"CodeYard.flask-snippets",
+		"ivangabriele.vscode-git-add-and-commit",
+		"felipecaputo.git-project-manager",
+		"GitHub.vscode-pull-request-github",
+		"GitHub.remotehub",
+		"jaydenlin.google-complete-me",
+		"mohd-akram.vscode-html-format",
+		"boundarystudio.html-extentions-pack",
+		"naveenvignesh5nv.html-live-server",
+		"wholroyd.jinja",
+		"Meezilla.json",
+		"mintlify.document",
+		"jakebathman.mysql-syntax",
+		"eridem.vscode-postman",
+		"rvest.vs-code-prettier-eslint",
+		"esbenp.prettier-vscode",
+		"tht13.python",
+		"donjayamanne.python-extension-pack",
+		"CodeJunkie.python-live-coding",
+		"tushortz.python-extended-snippets",
+		"nils-ballmann.python-coding-tools",
+		"ms-vscode-remote.vscode-remote-extensionpack",
+		"foxundermoon.shell-format",
+		"rcore.rcore-unused-css-classes",
+		"CelianRiboulet.webvalidator"
 	],
 	"forwardPorts": [
 		5432,
